// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-schema it should generate schemas from dual codecs 1`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "created_at": Object {
      "type": "string",
    },
  },
  "required": Array [
    "created_at",
  ],
  "type": "object",
}
`;

exports[`json-schema it should generate schemas from dual codecs 2`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "created_at": Object {
      "nodeType": "date",
    },
  },
  "required": Array [
    "created_at",
  ],
  "type": "object",
}
`;

exports[`json-schema it should generate schemas from recursive codecs 1`] = `
Object {
  "$ref": "#/definitions/11300e4a6c",
  "definitions": Object {
    "11300e4a6c": Object {
      "additionalProperties": false,
      "properties": Object {
        "a": Object {
          "type": "string",
        },
        "b": Object {
          "$ref": "#/definitions/11300e4a6c",
        },
      },
      "required": Array [
        "a",
      ],
      "type": "object",
    },
  },
}
`;

exports[`json-schema it should handle a simple identity schema 1`] = `
Object {
  "additionalProperties": false,
  "definitions": Object {},
  "properties": Object {
    "any": Object {},
    "array": Object {
      "items": Object {
        "type": "string",
      },
      "type": "array",
    },
    "boolean": Object {
      "type": "boolean",
    },
    "deeper_array": Object {
      "items": Object {
        "additionalProperties": false,
        "properties": Object {
          "a": Object {
            "type": "string",
          },
        },
        "required": Array [
          "a",
        ],
        "type": "object",
      },
      "type": "array",
    },
    "enum": Object {
      "enum": Array [
        "a",
        "b",
      ],
      "type": "string",
    },
    "intersection": Object {
      "allOf": Array [
        Object {
          "additionalProperties": false,
          "properties": Object {
            "a": Object {
              "type": "string",
            },
          },
          "required": Array [
            "a",
          ],
          "type": "object",
        },
        Object {
          "additionalProperties": false,
          "properties": Object {
            "b": Object {
              "type": "number",
            },
          },
          "required": Array [
            "b",
          ],
          "type": "object",
        },
      ],
    },
    "literal": Object {
      "enum": Array [
        "literal",
      ],
      "type": "string",
    },
    "multi": Object {
      "anyOf": Array [
        Object {
          "type": "string",
        },
        Object {
          "type": "number",
        },
        Object {
          "type": "boolean",
        },
      ],
    },
    "null": Object {
      "type": "null",
    },
    "number": Object {
      "type": "number",
    },
    "optional": Object {
      "type": "string",
    },
    "record": Object {
      "additionalProperties": Object {
        "type": "string",
      },
      "properties": Object {},
      "required": Array [],
      "type": "object",
    },
    "string": Object {
      "type": "string",
    },
    "tuple": Object {
      "prefixItems": Array [
        Object {
          "type": "string",
        },
        Object {
          "type": "number",
        },
      ],
      "type": "array",
    },
  },
  "required": Array [
    "string",
    "number",
    "boolean",
    "any",
    "null",
    "literal",
    "enum",
    "tuple",
    "multi",
    "array",
    "deeper_array",
    "record",
    "intersection",
  ],
  "type": "object",
}
`;
